--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
+    "vite": "vite",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
@@ -18,7 +19,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
     "react-responsive-carousel": "^3.2.23",
-    "react-router-dom": "^6.22.3",
+    "react-router-dom": "^6.23.0",
     "react-slick": "^0.30.2",
     "slick-carousel": "^1.8.1"
   },
